Fix annoying modsubs list scrollbar position

--- a/extension/data/styles/modbar.css
+++ b/extension/data/styles/modbar.css
@@ -164,6 +164,9 @@
     /* font-size: 11px; */
     color: #696969;
     text-align: center;
+    margin: -5px;
+    padding: 5px;
+
 }
 .mod-toolbox-rd .subreddits-you-mod-popup .tb-popup-footer {
     height: 10px;
@@ -171,6 +174,7 @@
 .mod-toolbox-rd #tb-my-subreddit-list {
     font-size: 11px;
     text-align: left;
+    margin: 5px 0;
 }
 .mod-toolbox-rd #tb-my-subreddit-list tr {
     display: flex;
